<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016
  ~  Created by: usenka, jwu5, cdmacken, jvogel, asanche
  ~  This program is free software; you can redistribute it and/or modify it under the terms of the
  ~  GNU General Public License as published by the Free Software Foundation; either version 2 of the
  ~  License, or (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY
  ~  without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE
  ~  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program; if
  ~ not, write to the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
  ~ 02110-1301, USA.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dryver.Activities.ActivityRegistration">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="22dp"
        android:id="@+id/firstname_edittext"
        android:hint="@string/activity_registration_firstname"
        android:layout_below="@+id/username_edittext"
        android:layout_alignStart="@+id/username_edittext" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/lastname_edittext"
        android:hint="@string/activity_registration_lastname"
        android:layout_below="@+id/firstname_edittext"
        android:layout_alignStart="@+id/firstname_edittext" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:id="@+id/email_edittext"
        android:hint="@string/activity_registration_email"
        android:layout_below="@+id/lastname_edittext"
        android:layout_alignStart="@+id/lastname_edittext" />

    <TextView
        android:text="@string/activity_registration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView8"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <TextView
        android:text="@string/activity_registration_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="43dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/username_edittext" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/phone_edittext"
        android:inputType="phone"
        android:hint="@string/activity_registration_phone"
        android:layout_below="@+id/email_edittext"
        android:layout_alignStart="@+id/email_edittext" />

    <Button
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/done_button"
        android:layout_below="@+id/phone_edittext"
        android:layout_alignStart="@+id/phone_edittext"
        android:layout_marginTop="39dp"
        android:layout_alignEnd="@+id/phone_edittext" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/username_edittext"
        android:hint="@string/activity_registration_username"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
