...
  ~ 02110-1301, USA.
  -->

<resources>
    <string name="app_name">Dryver</string>

    <string name="done">Done</string>
    <string name="new_user">New user?</string>
    <string name="existing_user">Existing user?</string>
    <string name="enter_trip_price">Enter trip cost</string>
    <string name="ryde">Ryde</string>
    <string name="dryve">Dryve</string>
    <string name="save_changes">Save</string>
...
    <string name="cost">Minimum Cost($)</string>
    <string name="active">Your Active Rides</string>


    <string name="view_profile">View Profile</string>

    <string name="activity_registration_title">Registration</string>
    <string name="activity_registration_instructions">Please fill all fields.</string>
    <string name="activity_registration_username">Username</string>
    <string name="activity_registration_firstname">First Name</string>
    <string name="activity_registration_lastname">Last Name</string>
    <string name="activity_registration_phone">Phone Number</string>
    <string name="activity_registration_email">Email Address</string>
...
